--- a/app/styles/sass/styles.css
+++ b/app/styles/sass/styles.css
@@ -9348,18 +9348,19 @@ div.panel .table > thead th, div.panel .table > thead tr th, table.table > thead
 /* line 155, partials/themes/matan-light/_bootswatch_overrides.scss */
 div.panel .table > thead th > *, div.panel .table > thead tr th > *, table.table > thead th > *, table.table > thead tr th > *, table.table.table-striped > thead th > *, table.table.table-striped > thead tr th > * {
   padding-bottom: 3px;
+  padding-left: 5px;
 }
-/* line 164, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 165, partials/themes/matan-light/_bootswatch_overrides.scss */
 div.panel .table > tbody > tr > td:first-child > .cell-content, table.table > tbody > tr > td:first-child > .cell-content, table.table.table-striped > tbody > tr > td:first-child > .cell-content {
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
 }
-/* line 170, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 171, partials/themes/matan-light/_bootswatch_overrides.scss */
 div.panel .table > tbody > tr > td:last-child > .cell-content, table.table > tbody > tr > td:last-child > .cell-content, table.table.table-striped > tbody > tr > td:last-child > .cell-content {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
 }
-/* line 175, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 176, partials/themes/matan-light/_bootswatch_overrides.scss */
 div.panel .table > tbody > tr td, table.table > tbody > tr td, table.table.table-striped > tbody > tr td {
   padding: 0px;
   border: 0px;
@@ -9368,7 +9369,7 @@ div.panel .table > tbody > tr td, table.table > tbody > tr td, table.table.table
   height: 58px;
   min-width: 80px;
 }
-/* line 183, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 184, partials/themes/matan-light/_bootswatch_overrides.scss */
 div.panel .table > tbody > tr td .cell-content, table.table > tbody > tr td .cell-content, table.table.table-striped > tbody > tr td .cell-content {
   margin-top: 3px;
   margin-bottom: 3px;
@@ -9382,25 +9383,33 @@ div.panel .table > tbody > tr td .cell-content, table.table > tbody > tr td .cel
   height: 92%;
   box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.1);
 }
-/* line 196, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 197, partials/themes/matan-light/_bootswatch_overrides.scss */
 div.panel .table > tbody > tr td .cell-content *, table.table > tbody > tr td .cell-content *, table.table.table-striped > tbody > tr td .cell-content * {
   margin-top: 0px;
   padding-top: 0px;
   vertical-align: top;
 }
-/* line 202, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 203, partials/themes/matan-light/_bootswatch_overrides.scss */
 div.panel .table > tbody > tr td .cell-content > *, table.table > tbody > tr td .cell-content > *, table.table.table-striped > tbody > tr td .cell-content > * {
   display: table-cell;
   vertical-align: top;
-  padding-top: 16px;
+  padding-top: 8px;
   padding-bottom: 16px;
 }
-/* line 209, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 210, partials/themes/matan-light/_bootswatch_overrides.scss */
 div.panel .table > tbody > tr td .cell-content > *:first-child, table.table > tbody > tr td .cell-content > *:first-child, table.table.table-striped > tbody > tr td .cell-content > *:first-child {
   padding-left: 13px;
 }
-
+/* line 214, partials/themes/matan-light/_bootswatch_overrides.scss */
+div.panel .table > tbody > tr td .cell-content .fa-check, table.table > tbody > tr td .cell-content .fa-check, table.table.table-striped > tbody > tr td .cell-content .fa-check {
+  color: #22bca8;
+}
 /* line 218, partials/themes/matan-light/_bootswatch_overrides.scss */
+div.panel .table > tbody > tr td .cell-content .fa-times, table.table > tbody > tr td .cell-content .fa-times, table.table.table-striped > tbody > tr td .cell-content .fa-times {
+  color: #f2526a;
+}
+
+/* line 227, partials/themes/matan-light/_bootswatch_overrides.scss */
 .panel {
   border: none;
   box-shadow: none;
