--- a/app/styles/sass/partials/themes/matan-light/_base_override.scss
+++ b/app/styles/sass/partials/themes/matan-light/_base_override.scss
@@ -2,6 +2,7 @@ html {
   body {
     .df-section {
       background-color: $df-section-background;
+      padding-left: 30px;
     }
 
     .df-section-header {
