Start applying new design to Import section of Apps tab

--- a/app/admin_components/adf-apps/views/df-app-details.html
+++ b/app/admin_components/adf-apps/views/df-app-details.html
@@ -143,7 +143,7 @@
             <div class="col-md-8">
 
                 <div class="form-group">
-                    <div class="form-controls">
+                    <div class="form-controls pull-right">
                         <button id="apps_details_cancel" type="button" class="btn btn-default" data-ng-click="cancelEditor()">Cancel</button>
                         <input id="apps_details_save" class="btn btn-default btn-primary" type="submit" value="Save" />
                     </div>
