--- a/app/styles/sass/partials/themes/matan-light/_base_override.scss
+++ b/app/styles/sass/partials/themes/matan-light/_base_override.scss
@@ -3,6 +3,11 @@ html {
     .df-section {
       background-color: $df-section-background;
       padding-left: 30px;
+
+      a {
+        color: #119add;
+        text-decoration: underline;
+      }
     }
 
     .df-section-header {
