--- a/app/admin_components/adf-apps/views/df-import-app.html
+++ b/app/admin_components/adf-apps/views/df-import-app.html
@@ -2,6 +2,82 @@
 
     <df-section-header data-title="'Import Application'"></df-section-header>
 
+    <form data-ng-submit="submitApp()" name="uploadForm" class="" >
+
+        <div class="form-group">
+            <div class="container-fluid">
+                <div class="row row-no-padding">
+                    <div class="col-md-12">
+                        <p><b>Select App Package File</b></p>
+                    </div>
+                </div>
+
+                <div class="row row-no-padding">
+                    <div class="col-md-8 col-lg-7">
+                        <p>Select one of the sample apps below, enter the URL for a package file, or browse for a local package file. Click 'Import' to add the app to your DreamFactory instance.</p>
+                    </div>
+                </div>
+                </br>
+                <div class="row row-no-padding">
+                    <div class="col-md-5 col-lg-4" style="max-width: 340px" data-ng-repeat="sampleAppsCol in [sampleAppsFirstColumn, sampleAppsSecondColumn]">
+                        <p class="form-controls" data-ng-repeat="app in sampleAppsCol">
+                            <input type="button"
+                                   class="btn btn-default btn-sm"
+                                   value="Select"
+                                   data-ng-click="loadSampleApp(app)"
+                                   onClick="this.blur()"/>
+                            <a href={{app.repo_url}}
+                               target = "_blank">&nbsp;{{app.name}}</a> {{app.description}}
+                        </p>
+                    </div>
+                </div>
+                </br>
+                <div class="row row-no-padding">
+                    <div class="col-md-8 col-lg-7">
+                        <div class="input-group form-controls" >
+                                                    <span class="input-group-btn">
+                                                        <button class="btn btn-default"
+                                                                type="button"
+                                                                data-ng-click="browseFileSystem()">Browse</button>
+                                                    </span>
+                            <input type="text" class="form-control"
+                                   data-ng-model="appPath"
+                                   placeholder="">
+                        </div><!-- /input-group -->
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+        <div class="row">
+            <div class="col-lg-6" >
+                <div class="form-group">
+                    <label>Storage Service (optional)</label>
+                    <select class="form-control" data-ng-model="storageService" data-ng-options="obj as obj.name for obj in apiData.service" >
+                        <option value="" ></option>
+                    </select>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-6" >
+                <div class="form-group">
+                    <label>Storage Folder (optional)</label>
+                    <input class="form-control" type="text" data-ng-model="storageContainer" placeholder="" data-ng-required="false"/>
+                </div>
+            </div>
+        </div>
+
+        <input style="display: none" type="file" id="upload" name="upload" data-ng-model="uploadFile" data-file-model="uploadFile" file-model-2 />
+        <input type="submit" class="btn btn-default btn-primary" value="Import" />
+    </form>
+
     <div class="row">
         <div class="col-xs-12">
             <div class="panel panel-default">
