--- a/app/styles/sass/partials/themes/matan-light/_forms.scss
+++ b/app/styles/sass/partials/themes/matan-light/_forms.scss
@@ -20,27 +20,30 @@ html {
       color: #7490a9;
     }
 
-    .form-group {
-      .form-controls {
+    .form-controls {
 
-        .btn {
-          min-width: 80px;
-          font-size: 12px;
-        }
+      .btn {
+        min-width: 80px;
+        font-size: 12px;
+      }
 
-        .btn-default {
-          border: 1px solid #8D9CA8;
-          border-radius: 4px;
-          height: 35px;
-        }
+      .btn-default {
+        border: 1px solid #8D9CA8;
+        border-radius: 4px;
+        height: 35px;
+      }
 
-        .btn-primary, .form-group .btn-primary .btn-primary:hover, .btn-default.btn-primary:hover {
-          height: 35px;
-          border-radius: 4px;
-          box-shadow: 0 13px 14px -10px rgba(0, 0, 0, 0.2), 0 0 10px 0 rgba(0, 0, 0, 0.05);
-          background-image: linear-gradient(113deg, #5a6aff, #789dff);
-          background-color: #789dff;
-        }
+      .btn-primary, .form-group .btn-primary .btn-primary:hover, .btn-default.btn-primary:hover {
+        height: 35px;
+        border-radius: 4px;
+        box-shadow: 0 13px 14px -10px rgba(0, 0, 0, 0.2), 0 0 10px 0 rgba(0, 0, 0, 0.05);
+        background-image: linear-gradient(113deg, #5a6aff, #789dff);
+        background-color: #789dff;
+      }
+
+      .btn-dark {
+        background-color: #1d3d56;
+        color: #ffffff;
       }
     }
   }
