--- a/app/styles/sass/styles.css
+++ b/app/styles/sass/styles.css
@@ -9248,24 +9248,29 @@ html body div.checkbox, html body div.radio {
 html body i.fa-info-circle {
   color: #7490a9;
 }
-/* line 26, partials/themes/matan-light/_forms.scss */
-html body .form-group .form-controls .btn {
+/* line 25, partials/themes/matan-light/_forms.scss */
+html body .form-controls .btn {
   min-width: 80px;
   font-size: 12px;
 }
-/* line 31, partials/themes/matan-light/_forms.scss */
-html body .form-group .form-controls .btn-default {
+/* line 30, partials/themes/matan-light/_forms.scss */
+html body .form-controls .btn-default {
   border: 1px solid #8D9CA8;
   border-radius: 4px;
   height: 35px;
 }
-/* line 37, partials/themes/matan-light/_forms.scss */
-html body .form-group .form-controls .btn-primary, html body .form-group .form-controls .form-group .btn-primary .btn-primary:hover, html body .form-group .form-controls .btn-default.btn-primary:hover {
+/* line 36, partials/themes/matan-light/_forms.scss */
+html body .form-controls .btn-primary, html body .form-controls .form-group .btn-primary .btn-primary:hover, html body .form-controls .btn-default.btn-primary:hover {
   height: 35px;
   border-radius: 4px;
   box-shadow: 0 13px 14px -10px rgba(0, 0, 0, 0.2), 0 0 10px 0 rgba(0, 0, 0, 0.05);
   background-image: linear-gradient(113deg, #5a6aff, #789dff);
   background-color: #789dff;
+}
+/* line 44, partials/themes/matan-light/_forms.scss */
+html body .form-controls .btn-dark {
+  background-color: #1d3d56;
+  color: #ffffff;
 }
 
 /* line 7, partials/themes/matan-light/_bootswatch_overrides.scss */
