--- a/app/admin_components/adf-apps/views/df-app-details.html
+++ b/app/admin_components/adf-apps/views/df-app-details.html
@@ -11,12 +11,12 @@
                     <!-- Application Name -->
                     <div class="form-group">
                         <label>Application Name</label><df-simple-help data-options="dfHelp.name"></df-simple-help>
-                        <input id="apps_details_name" class="form-control" type="text" data-ng-model="app.record.name" placeholder="" data-ng-required="true"/>
+                        <input id="apps_details_name" class="form-control" type="text" data-ng-model="app.record.name" placeholder="Application Name" data-ng-required="true"/>
                     </div>
 
                     <div class="form-group">
                         <label>Description</label><df-simple-help data-options="dfHelp.description"></df-simple-help>
-                        <input id="apps_details_description" class="form-control" type="text" data-ng-model="app.record.description" placeholder=""/>
+                        <input id="apps_details_description" class="form-control" type="text" data-ng-model="app.record.description" placeholder="Description"/>
                     </div>
 
                     <!-- Your Application API Key -->
@@ -121,7 +121,7 @@
                     <!-- Assign a Role -->
                     <div class="form-group"> 
                         <label>Assign a Default Role Filter </label>
-                        <input class="form-control" ng-model="roleFilter">
+                        <input class="form-control" ng-model="roleFilter" placeholder="Assign a Default Role Filter">
                     </div>
                     <div class="form-group">
                         <label>Assign a Default Role</label><df-simple-help data-options="dfHelp.assignRole"></df-simple-help>
