Apply new style to Manage section of Admin tab

--- a/app/styles/sass/partials/themes/matan-light/_base_override.scss
+++ b/app/styles/sass/partials/themes/matan-light/_base_override.scss
@@ -39,8 +39,8 @@ html {
         }
 
         > * {
-          float: right!important;
-          clear: both;
+          //float: right!important;
+          //clear: both;
         }
 
         .btn-group {
