--- a/app/admin_components/adf-apps/views/df-import-app.html
+++ b/app/admin_components/adf-apps/views/df-import-app.html
@@ -27,7 +27,7 @@
                                    value="Select"
                                    data-ng-click="loadSampleApp(app)"
                                    onClick="this.blur()"/>
-                            <a href={{app.repo_url}}
+                            <a class="hiperlinkable" href={{app.repo_url}}
                                target = "_blank">&nbsp;{{app.name}}</a> {{app.description}}
                         </p>
                     </div>
