--- a/app/styles/sass/partials/themes/matan-light/_base_override.scss
+++ b/app/styles/sass/partials/themes/matan-light/_base_override.scss
@@ -4,7 +4,7 @@ html {
       background-color: $df-section-background;
       padding-left: 30px;
 
-      a {
+      a.hiperlinkable {
         color: #119add;
         text-decoration: underline;
       }
