--- a/app/admin_components/adf-roles/views/df-manage-roles.html
+++ b/app/admin_components/adf-roles/views/df-manage-roles.html
@@ -48,16 +48,33 @@
                     <tbody>
                     <tr data-ng-repeat="obj in roles | orderObjectBy:order.orderBy:order.orderByReverse" class="repeated-item" class="repeated-item" data-ng-class="obj.__dfUI.selected ? 'danger' : ''">
                         <td style="width: 80px;">
-                            <div class="checkbox" style="margin: 0">
-                                <label>
-                                    <input id="roles_table_row_checkbox_{{obj.record.id}}" type="checkbox" data-ng-checked="obj.__dfUI.selected" data-ng-click="setSelected(obj)" />
-                                    <div class="btn-group btn-group-xs">
-                                        <button id="roles_table_row_delete_{{obj.record.id}}" type="button" class="btn btn-xs btn-default" data-ng-click="deleteRole(obj)" title="Delete role"><i class="fa fa-trash"></i></button>
-                                    </div>
-                                </label>
+                            <div class="cell-content">
+                                <div class="checkbox" style="margin: 0">
+                                    <label>
+                                        <input id="roles_table_row_checkbox_{{obj.record.id}}" type="checkbox" data-ng-checked="obj.__dfUI.selected" data-ng-click="setSelected(obj)" />
+                                        <div class="btn-group btn-group-xs">
+                                            <button id="roles_table_row_delete_{{obj.record.id}}" type="button" class="btn btn-xs btn-default" data-ng-click="deleteRole(obj)" title="Delete role"><i class="fa fa-trash"></i></button>
+                                        </div>
+                                    </label>
+                                </div>
                             </div>
                         </td>
-                        <td id="roles_table_row_{{$index}}_{{obj.record.id}}" data-ng-click="editRole(obj.record)" data-ng-repeat="value in obj.record | orderAndShowValue : fields track by $index">{{value}}</td>
+                        <td id="roles_table_row_{{$index}}_{{obj.record.id}}" data-ng-click="editRole(obj.record)" data-ng-repeat="value in obj.record | orderAndShowValue : fields track by $index">
+                            <div class="cell-content" ng-switch="fields[$index].name">
+                                <div ng-switch-when="is_active">
+                                    <span ng-if="value == true">
+                                                <i class="fa fa-check"></i>
+                                    </span>
+                                    <span ng-if="value == false">
+                                                <i class="fa fa-times"></i>
+                                    </span>
+                                </div>
+
+                                <div ng-switch-default>
+                                    {{value}}
+                                </div>
+                            </div>
+                        </td>
                     </tr>
                     </tbody>
                 </table>
