New style to Admin Create

--- a/app/styles/sass/partials/themes/matan-light/_bootswatch_overrides.scss
+++ b/app/styles/sass/partials/themes/matan-light/_bootswatch_overrides.scss
@@ -1,33 +1,13 @@
 @import "base_override";
 @import "homepage";
 @import "forms";
+@import "alerts_override";
+@import "navs_override";
 
 .btn-primary {
 
   &:hover {
     color: #FFF;
-  }
-}
-
-.navbar {
-  .navbar-nav > li > a,
-  &-brand {
-    text-shadow: none;
-  }
-}
-
-.navbar-default {
-  box-shadow: 0 3px 11px 0 rgba(0, 0, 0, 0.07);
-}
-
-.navbar-fixed-top {
-  .navbar-brand {
-    margin-left: 0px !important;
-    padding-left: 0px !important;
-  }
-
-  .navbar-right {
-    margin-right: 0px !important;
   }
 }
 
@@ -81,22 +61,7 @@
         }
 
         &.active:after {
-          position: absolute;
-          height: 3px;
-          margin: 0 auto;
-          content: '';
-          left: 0;
-          right: 0;
-          width: 90%;
-          color: #000;
-          background-color: #5b5bd9;
-          left: 0;
-          bottom: 14px;
-          width: 16px;
-          opacity: 0.3;
-          border-radius: 3px;
-          border: 1px solid #5b5bd9;
-          border-radius: 10px;
+          @extend %nav-underscore;
         }
       }
     }
