--- a/app/styles/sass/partials/themes/matan-light/_variable_overrides.scss
+++ b/app/styles/sass/partials/themes/matan-light/_variable_overrides.scss
@@ -15,3 +15,7 @@ $navbar-default-link-hover-bg: #f7f9fa;
 $table-border-color: transparent !default;
 
 $panel-border-radius: 5px;
+
+$alert-info-bg:               #ffffff !default;
+$alert-info-text:             #163b5a !default;
+$alert-info-border:           #ffffff !default;
