--- a/app/styles/sass/styles.css
+++ b/app/styles/sass/styles.css
@@ -6716,17 +6716,17 @@ a.thumbnail.active {
 
 /* line 63, ../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/_alerts.scss */
 .alert-info {
-  background-color: #d9edf7;
-  border-color: #bce8f1;
-  color: #3a87ad;
+  background-color: #ffffff;
+  border-color: #ffffff;
+  color: #163b5a;
 }
 /* line 8, ../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_alerts.scss */
 .alert-info hr {
-  border-top-color: #a6e1ec;
+  border-top-color: #f2f2f2;
 }
 /* line 11, ../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_alerts.scss */
 .alert-info .alert-link {
-  color: #2d6987;
+  color: #0c2031;
 }
 
 /* line 67, ../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/_alerts.scss */
@@ -9277,69 +9277,19 @@ html body .form-controls .btn-dark {
   color: #ffffff;
 }
 
-/* line 7, partials/themes/matan-light/_bootswatch_overrides.scss */
-.btn-primary:hover {
-  color: #FFF;
+/* line 1, partials/themes/matan-light/_alerts_override.scss */
+.alert-info {
+  line-height: 1.71;
+  border-radius: 2px;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.1);
+}
+/* line 6, partials/themes/matan-light/_alerts_override.scss */
+.alert-info .fa-info-circle {
+  color: #ffa600;
 }
 
-/* line 13, partials/themes/matan-light/_bootswatch_overrides.scss */
-.navbar .navbar-nav > li > a, .navbar-brand {
-  text-shadow: none;
-}
-
-/* line 19, partials/themes/matan-light/_bootswatch_overrides.scss */
-.navbar-default {
-  box-shadow: 0 3px 11px 0 rgba(0, 0, 0, 0.07);
-}
-
-/* line 24, partials/themes/matan-light/_bootswatch_overrides.scss */
-.navbar-fixed-top .navbar-brand {
-  margin-left: 0px !important;
-  padding-left: 0px !important;
-}
-/* line 29, partials/themes/matan-light/_bootswatch_overrides.scss */
-.navbar-fixed-top .navbar-right {
-  margin-right: 0px !important;
-}
-
-/* line 35, partials/themes/matan-light/_bootswatch_overrides.scss */
-.df-menu {
-  margin: 0px auto !important;
-}
-/* line 41, partials/themes/matan-light/_bootswatch_overrides.scss */
-.df-menu .df-menu-container.second-nav-menu-items {
-  padding-left: 0px;
-  padding-right: 0px;
-}
-/* line 46, partials/themes/matan-light/_bootswatch_overrides.scss */
-.df-menu .df-menu-container .df-menu-icon {
-  vertical-align: middle;
-  color: #2e2ea3;
-  padding: 10px 15px 10px 0px;
-  margin: 10px auto;
-}
-/* line 54, partials/themes/matan-light/_bootswatch_overrides.scss */
-.df-menu .df-menu-container .nav-pills > li:first-child {
-  padding-left: 13px;
-  padding-right: 13px;
-}
-/* line 62, partials/themes/matan-light/_bootswatch_overrides.scss */
-.df-menu .df-menu-container .nav-pills > li a {
-  color: #7490a9;
-  margin: 10px auto;
-}
-/* line 68, partials/themes/matan-light/_bootswatch_overrides.scss */
-.df-menu .df-menu-container .nav-pills > li.active {
-  background-color: #f7f9fa;
-}
-/* line 73, partials/themes/matan-light/_bootswatch_overrides.scss */
-.df-menu .df-menu-container .nav-pills > li.active > a, .df-menu .df-menu-container .nav-pills > li.active > a:hover, .df-menu .df-menu-container .nav-pills > li.active > a:focus {
-  font-weight: bold;
-  color: #5b5bd9;
-  background-color: transparent;
-}
-/* line 83, partials/themes/matan-light/_bootswatch_overrides.scss */
-.df-menu .df-menu-container .nav-pills > li.active:after {
+/* line 1, partials/themes/matan-light/_navs_override.scss */
+.nav-tabs li.active:after, .df-menu .df-menu-container .nav-pills > li.active:after {
   position: absolute;
   height: 3px;
   margin: 0 auto;
@@ -9358,31 +9308,114 @@ html body .form-controls .btn-dark {
   border-radius: 10px;
 }
 
-/* line 110, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 21, partials/themes/matan-light/_navs_override.scss */
+.navbar .navbar-nav > li > a, .navbar-brand {
+  text-shadow: none;
+}
+
+/* line 27, partials/themes/matan-light/_navs_override.scss */
+.navbar-default {
+  box-shadow: 0 3px 11px 0 rgba(0, 0, 0, 0.07);
+}
+
+/* line 32, partials/themes/matan-light/_navs_override.scss */
+.navbar-fixed-top .navbar-brand {
+  margin-left: 0px !important;
+  padding-left: 0px !important;
+}
+/* line 37, partials/themes/matan-light/_navs_override.scss */
+.navbar-fixed-top .navbar-right {
+  margin-right: 0px !important;
+}
+
+/* line 42, partials/themes/matan-light/_navs_override.scss */
+.nav-tabs {
+  border: none;
+  margin-left: -15px;
+}
+/* line 46, partials/themes/matan-light/_navs_override.scss */
+.nav-tabs li.vert-nav-divider {
+  padding-top: 10px;
+}
+/* line 52, partials/themes/matan-light/_navs_override.scss */
+.nav-tabs li a, .nav-tabs li a:hover, .nav-tabs li a:active, .nav-tabs li a:visited, .nav-tabs li a:focus, .nav-tabs li.active a, .nav-tabs li.active a:hover, .nav-tabs li.active a:active, .nav-tabs li.active a:visited, .nav-tabs li.active a:focus {
+  border: none;
+  background-color: transparent;
+  margin-bottom: 10px;
+}
+/* line 61, partials/themes/matan-light/_navs_override.scss */
+.nav-tabs li.active a, .nav-tabs li.active a:hover, .nav-tabs li.active a:active, .nav-tabs li.active a:visited, .nav-tabs li.active a:focus {
+  color: #5b5bd9;
+  font-weight: 900;
+}
+
+/* line 9, partials/themes/matan-light/_bootswatch_overrides.scss */
+.btn-primary:hover {
+  color: #FFF;
+}
+
+/* line 15, partials/themes/matan-light/_bootswatch_overrides.scss */
+.df-menu {
+  margin: 0px auto !important;
+}
+/* line 21, partials/themes/matan-light/_bootswatch_overrides.scss */
+.df-menu .df-menu-container.second-nav-menu-items {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+/* line 26, partials/themes/matan-light/_bootswatch_overrides.scss */
+.df-menu .df-menu-container .df-menu-icon {
+  vertical-align: middle;
+  color: #2e2ea3;
+  padding: 10px 15px 10px 0px;
+  margin: 10px auto;
+}
+/* line 34, partials/themes/matan-light/_bootswatch_overrides.scss */
+.df-menu .df-menu-container .nav-pills > li:first-child {
+  padding-left: 13px;
+  padding-right: 13px;
+}
+/* line 42, partials/themes/matan-light/_bootswatch_overrides.scss */
+.df-menu .df-menu-container .nav-pills > li a {
+  color: #7490a9;
+  margin: 10px auto;
+}
+/* line 48, partials/themes/matan-light/_bootswatch_overrides.scss */
+.df-menu .df-menu-container .nav-pills > li.active {
+  background-color: #f7f9fa;
+}
+/* line 53, partials/themes/matan-light/_bootswatch_overrides.scss */
+.df-menu .df-menu-container .nav-pills > li.active > a, .df-menu .df-menu-container .nav-pills > li.active > a:hover, .df-menu .df-menu-container .nav-pills > li.active > a:focus {
+  font-weight: bold;
+  color: #5b5bd9;
+  background-color: transparent;
+}
+
+/* line 75, partials/themes/matan-light/_bootswatch_overrides.scss */
 body .df-sidebar-nav .nav-pills li > a {
   padding-left: 0px;
 }
-/* line 114, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 79, partials/themes/matan-light/_bootswatch_overrides.scss */
 body .df-sidebar-nav .nav-pills li > a:hover {
   background: transparent;
   color: #1d3d56;
   font-weight: bold;
 }
-/* line 121, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 86, partials/themes/matan-light/_bootswatch_overrides.scss */
 body .df-sidebar-nav .nav-pills li.active a {
   font-weight: bold;
 }
-/* line 125, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 90, partials/themes/matan-light/_bootswatch_overrides.scss */
 body .df-sidebar-nav .nav-pills li.active:hover a {
   color: #5b5bd9;
 }
 
-/* line 133, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 98, partials/themes/matan-light/_bootswatch_overrides.scss */
 .well {
   box-shadow: none;
 }
 
-/* line 137, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 102, partials/themes/matan-light/_bootswatch_overrides.scss */
 .btn-default {
   background-image: none;
   background-color: transparent;
@@ -9390,32 +9423,32 @@ body .df-sidebar-nav .nav-pills li.active:hover a {
   opacity: 1 !important;
 }
 
-/* line 148, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 113, partials/themes/matan-light/_bootswatch_overrides.scss */
 div.panel .table > thead, div.panel .table > thead tr, table.table > thead, table.table > thead tr, table.table.table-striped > thead, table.table.table-striped > thead tr {
   background-color: #1d3d56;
   color: #ffffff;
   height: 38px;
 }
-/* line 153, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 118, partials/themes/matan-light/_bootswatch_overrides.scss */
 div.panel .table > thead th, div.panel .table > thead tr th, table.table > thead th, table.table > thead tr th, table.table.table-striped > thead th, table.table.table-striped > thead tr th {
   vertical-align: middle;
 }
-/* line 156, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 121, partials/themes/matan-light/_bootswatch_overrides.scss */
 div.panel .table > thead th > *, div.panel .table > thead tr th > *, table.table > thead th > *, table.table > thead tr th > *, table.table.table-striped > thead th > *, table.table.table-striped > thead tr th > * {
   padding-bottom: 3px;
   padding-left: 5px;
 }
-/* line 166, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 131, partials/themes/matan-light/_bootswatch_overrides.scss */
 div.panel .table > tbody > tr > td:first-child > .cell-content, table.table > tbody > tr > td:first-child > .cell-content, table.table.table-striped > tbody > tr > td:first-child > .cell-content {
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
 }
-/* line 172, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 137, partials/themes/matan-light/_bootswatch_overrides.scss */
 div.panel .table > tbody > tr > td:last-child > .cell-content, table.table > tbody > tr > td:last-child > .cell-content, table.table.table-striped > tbody > tr > td:last-child > .cell-content {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
 }
-/* line 177, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 142, partials/themes/matan-light/_bootswatch_overrides.scss */
 div.panel .table > tbody > tr td, table.table > tbody > tr td, table.table.table-striped > tbody > tr td {
   padding: 0px;
   border: 0px;
@@ -9424,7 +9457,7 @@ div.panel .table > tbody > tr td, table.table > tbody > tr td, table.table.table
   height: 58px;
   min-width: 80px;
 }
-/* line 185, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 150, partials/themes/matan-light/_bootswatch_overrides.scss */
 div.panel .table > tbody > tr td .cell-content, table.table > tbody > tr td .cell-content, table.table.table-striped > tbody > tr td .cell-content {
   margin-top: 3px;
   margin-bottom: 3px;
@@ -9438,39 +9471,39 @@ div.panel .table > tbody > tr td .cell-content, table.table > tbody > tr td .cel
   height: 92%;
   box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.1);
 }
-/* line 198, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 163, partials/themes/matan-light/_bootswatch_overrides.scss */
 div.panel .table > tbody > tr td .cell-content *, table.table > tbody > tr td .cell-content *, table.table.table-striped > tbody > tr td .cell-content * {
   margin-top: 0px;
   padding-top: 0px;
   vertical-align: top;
 }
-/* line 204, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 169, partials/themes/matan-light/_bootswatch_overrides.scss */
 div.panel .table > tbody > tr td .cell-content > *, table.table > tbody > tr td .cell-content > *, table.table.table-striped > tbody > tr td .cell-content > * {
   display: table-cell;
   vertical-align: top;
   padding-top: 8px;
   padding-bottom: 16px;
 }
-/* line 211, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 176, partials/themes/matan-light/_bootswatch_overrides.scss */
 div.panel .table > tbody > tr td .cell-content > *:first-child, table.table > tbody > tr td .cell-content > *:first-child, table.table.table-striped > tbody > tr td .cell-content > *:first-child {
   padding-left: 13px;
 }
-/* line 215, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 180, partials/themes/matan-light/_bootswatch_overrides.scss */
 div.panel .table > tbody > tr td .cell-content .fa-check, table.table > tbody > tr td .cell-content .fa-check, table.table.table-striped > tbody > tr td .cell-content .fa-check {
   color: #22bca8;
 }
-/* line 219, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 184, partials/themes/matan-light/_bootswatch_overrides.scss */
 div.panel .table > tbody > tr td .cell-content .fa-times, table.table > tbody > tr td .cell-content .fa-times, table.table.table-striped > tbody > tr td .cell-content .fa-times {
   color: #f2526a;
 }
 
-/* line 228, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 193, partials/themes/matan-light/_bootswatch_overrides.scss */
 .panel {
   border: none;
   box-shadow: none;
 }
 
-/* line 233, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 198, partials/themes/matan-light/_bootswatch_overrides.scss */
 .row-no-padding > [class*="col-"] {
   padding-left: 0 !important;
   padding-right: 0 !important;
