New design to Users Create

--- a/app/admin_components/adf-admins/views/df-admin-details.html
+++ b/app/admin_components/adf-admins/views/df-admin-details.html
@@ -61,7 +61,7 @@
                         <hr />
 
                     </div>
-                    <div class="col-md-5">
+                    <div class="col-md-5" style="max-width: 500px">
 
                         <!-- Admin Invite/Confirmation -->
                         <div class="form-group">
