--- a/app/admin_components/adf-users/views/df-input-lookup-keys.html
+++ b/app/admin_components/adf-users/views/df-input-lookup-keys.html
@@ -21,31 +21,44 @@
         </tr>
         </thead>
 
-
         <tbody>
-
-        <tr data-ng-repeat="key in lookupKeys track by $index" ng-show="key.record.user_id !== null">
-            <td class="form-group" data-ng-class="key.__dfUI.unique ? '' : 'has-error'">
-                <input id="user_details_lookupkeys_name_{{$index}}" class="form-control" data-ng-model="key.record.name" data-ng-keyup="_isUniqueKey()" type="text" data-ng-required="true"/>
-            </td>
-            <td>
-                <input id="user_details_lookupkeys_value_{{$index}}" class="form-control"  data-ng-model="key.record.value" type="text" data-ng-required="true" />
-            </td>
-            <td>
-                <input id="user_details_lookupkeys_private_{{$index}}" data-ng-model="key.record.private" type="checkbox" />
-            </td>
-            <!-- Todo: implement this after implementing an UI for non-admin users to update lookups
-            <td>
-                <input data-ng-model="key.record.allow_user_update" type="checkbox" />
-            </td>
-            -->
-            <td>
-                <div class="btn-group">
-                    <button id="user_details_lookupkeys_removelookupkey_{{$index}}" type="button" class="btn btn-default btn-sm" data-ng-click="removeKey($index)" title="Delete lookup key"><i class="fa fa-trash-o fa-fw"></i></button>
-                </div>
-            </td>
-        </tr>
-
+            <tr data-ng-repeat="key in lookupKeys track by $index" ng-show="key.record.user_id !== null">
+                <td class="form-group" data-ng-class="key.__dfUI.unique ? '' : 'has-error'">
+                    <div class="cell-content">
+                        <div>
+                            <input id="user_details_lookupkeys_name_{{$index}}" class="form-control" data-ng-model="key.record.name" data-ng-keyup="_isUniqueKey()" type="text" data-ng-required="true"/>
+                        </div>
+                    </div>
+                </td>
+                <td>
+                    <div class="cell-content">
+                        <div>
+                            <input id="user_details_lookupkeys_value_{{$index}}" class="form-control"  data-ng-model="key.record.value" type="text" data-ng-required="true" />
+                        </div>
+                    </div>
+                </td>
+                <td>
+                    <div class="cell-content">
+                        <div>
+                            <input id="user_details_lookupkeys_private_{{$index}}" data-ng-model="key.record.private" type="checkbox" />
+                        </div>
+                    </div>
+                </td>
+                <!-- Todo: implement this after implementing an UI for non-admin users to update lookups
+                <td>
+                    <input data-ng-model="key.record.allow_user_update" type="checkbox" />
+                </td>
+                -->
+                <td>
+                    <div class="cell-content">
+                        <div>
+                            <div class="btn-group">
+                                <button id="user_details_lookupkeys_removelookupkey_{{$index}}" type="button" class="btn btn-default btn-sm" data-ng-click="removeKey($index)" title="Delete lookup key"><i class="fa fa-trash-o fa-fw"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                </td>
+            </tr>
         </tbody>
     </table>
 
