--- a/app/admin_components/adf-admins/views/df-input-lookup-keys.html
+++ b/app/admin_components/adf-admins/views/df-input-lookup-keys.html
@@ -8,12 +8,15 @@
         <table class="table table-hover table-striped table-responsive table-rows-extendable">
             <thead>
             <tr>
-                <th>Name</th>
-                <th>Value</th>
-                <th>Private</th>
+                <th><div>Name</div></th>
+                <th><div>Value</div></th>
+                <th><div>Private</div></th>
                 <!-- Todo: implement this after implementing an UI for non-admin users to update lookups
                 <th>Allow User Update</th>
                 -->
+                <th>
+                    <i class="fa fa-trash-o fa-fw"></i>
+                </th>
                 <th>
                     <div class="btn-group">
                         <div class="form-controls">
@@ -25,24 +28,24 @@
             </thead>
 
 
-            <tbody>
+            <tbody class="tbody-transparent">
             <tr data-ng-repeat="key in lookupKeys track by $index" ng-show="key.record.user_id !== null">
                 <td class="form-group" data-ng-class="key.__dfUI.unique ? '' : 'has-error'">
-                    <div class="cell-content">
+                    <div class="cell-content input-cell">
                         <div>
-                            <input class="form-control" data-ng-model="key.record.name" data-ng-keyup="_isUniqueKey()" type="text" data-ng-required="true"/>
+                            <input class="form-control" data-ng-model="key.record.name" data-ng-keyup="_isUniqueKey()" type="text" data-ng-required="true" placeholder="Name"/>
                         </div>
                     </div>
                 </td>
                 <td>
-                    <div class="cell-content">
+                    <div class="cell-content input-cell">
                         <div>
-                            <input class="form-control"  data-ng-model="key.record.value" type="text" data-ng-required="true" />
+                            <input class="form-control"  data-ng-model="key.record.value" type="text" data-ng-required="true" placeholder="Value"/>
                         </div>
                     </div>
                 </td>
                 <td>
-                    <div class="cell-content">
+                    <div class="cell-content checkbox-cell">
                         <div>
                             <input data-ng-model="key.record.private" type="checkbox" />
                         </div>
@@ -54,7 +57,7 @@
                 </td>
                 -->
                 <td>
-                    <div class="cell-content">
+                    <div class="cell-content icon-cell">
                         <div>
                             <div class="btn-group">
                                 <button type="button" class="btn btn-default btn-sm" data-ng-click="removeKey($index)" title="Delete lookup key"><i class="fa fa-trash-o fa-fw"></i></button>
@@ -62,12 +65,17 @@
                         </div>
                     </div>
                 </td>
+                <td>
+                    <div class="cell-content"></div>
+                </td>
             </tr>
             </tbody>
         </table>
     </div>
 
-    <p data-ng-if="lookupKeys.length === 0">
-        No lookup keys for this admin. Click the plus button to add.
-    </p>
+    <div class="table-rows-extendable">
+        <p class="empty-table-placeholder" data-ng-if="lookupKeys.length === 0">
+            No lookup keys for this admin. Click the &nbsp;<i class="fa fa-plus fa-fw"></i>&nbsp; button to add.
+        </p>
+    </div>
 </div>
