--- a/app/styles/sass/styles.css
+++ b/app/styles/sass/styles.css
@@ -9287,6 +9287,10 @@ html body .form-controls .btn-dark {
 .alert-info .fa-info-circle {
   color: #ffa600;
 }
+/* line 10, partials/themes/matan-light/_alerts_override.scss */
+.alert-info p {
+  word-wrap: break-word;
+}
 
 /* line 1, partials/themes/matan-light/_navs_override.scss */
 .nav-tabs li.active:after, .df-menu .df-menu-container .nav-pills > li.active:after {
@@ -9349,52 +9353,132 @@ html body .form-controls .btn-dark {
   font-weight: 900;
 }
 
-/* line 6, partials/themes/matan-light/_tables_override.scss */
-.table-rows-extendable thead tr th:last-child {
+/* line 4, partials/themes/matan-light/_tables_override.scss */
+.table-rows-extendable .empty-table-placeholder, table.table.table-rows-extendable .empty-table-placeholder {
+  color: #718fab;
+  padding-left: 20px;
+}
+/* line 8, partials/themes/matan-light/_tables_override.scss */
+.table-rows-extendable .empty-table-placeholder i.fa-plus, table.table.table-rows-extendable .empty-table-placeholder i.fa-plus {
+  border-radius: 2px;
+  box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.1);
+  background-color: #5b5bd9;
+  color: #ffffff;
+  font-size: 7px;
+  vertical-align: middle;
+  width: 26.5px;
+  height: 19px;
+  padding-top: 6px;
+}
+/* line 24, partials/themes/matan-light/_tables_override.scss */
+.table-rows-extendable thead tr th:last-child, table.table.table-rows-extendable thead tr th:last-child {
   background-color: #F7F9FA;
   border: none;
+  padding: 0px;
+  width: 58px;
 }
-/* line 10, partials/themes/matan-light/_tables_override.scss */
-.table-rows-extendable thead tr th:last-child .btn {
+/* line 30, partials/themes/matan-light/_tables_override.scss */
+.table-rows-extendable thead tr th:last-child > *, table.table.table-rows-extendable thead tr th:last-child > * {
+  padding-bottom: 0px !important;
+  float: right;
+}
+/* line 34, partials/themes/matan-light/_tables_override.scss */
+.table-rows-extendable thead tr th:last-child .btn-group, table.table.table-rows-extendable thead tr th:last-child .btn-group {
+  padding-left: 20px;
+}
+/* line 36, partials/themes/matan-light/_tables_override.scss */
+.table-rows-extendable thead tr th:last-child .btn-group .btn, table.table.table-rows-extendable thead tr th:last-child .btn-group .btn {
   width: 53px;
   min-width: 53px;
+  height: 38px;
+  background-image: none;
+  border-radius: 4px;
+  box-shadow: 1px 9px 8px -4px rgba(0, 0, 0, 0.2);
+  background-color: #5b5bd9;
+}
+/* line 52, partials/themes/matan-light/_tables_override.scss */
+.table-rows-extendable tbody tr .btn, table.table.table-rows-extendable tbody tr .btn {
+  padding-left: 0px;
+}
+/* line 57, partials/themes/matan-light/_tables_override.scss */
+.table-rows-extendable tbody tr .input-cell > *, table.table.table-rows-extendable tbody tr .input-cell > * {
+  padding-left: 0px !important;
+  display: block !important;
+}
+/* line 61, partials/themes/matan-light/_tables_override.scss */
+.table-rows-extendable tbody tr .input-cell > * input, table.table.table-rows-extendable tbody tr .input-cell > * input {
+  width: 94%;
+  padding-bottom: 0px;
+}
+/* line 68, partials/themes/matan-light/_tables_override.scss */
+.table-rows-extendable tbody tr .checkbox-cell, .table-rows-extendable tbody tr .icon-cell, table.table.table-rows-extendable tbody tr .checkbox-cell, table.table.table-rows-extendable tbody tr .icon-cell {
+  padding-top: 20px !important;
+}
+/* line 73, partials/themes/matan-light/_tables_override.scss */
+.table-rows-extendable tbody tr .icon-cell i, table.table.table-rows-extendable tbody tr .icon-cell i {
+  font-size: 14px;
+  color: #183b59;
+  text-align: left;
+}
+/* line 79, partials/themes/matan-light/_tables_override.scss */
+.table-rows-extendable tbody tr .icon-cell .btn:hover, .table-rows-extendable tbody tr .icon-cell .btn:focus, .table-rows-extendable tbody tr .icon-cell .btn:active, table.table.table-rows-extendable tbody tr .icon-cell .btn:hover, table.table.table-rows-extendable tbody tr .icon-cell .btn:focus, table.table.table-rows-extendable tbody tr .icon-cell .btn:active {
+  border: none;
+  background-color: transparent;
+  outline: none;
+  box-shadow: none;
+}
+/* line 87, partials/themes/matan-light/_tables_override.scss */
+.table-rows-extendable tbody tr td:last-child, table.table.table-rows-extendable tbody tr td:last-child {
+  min-width: 0px !important;
+}
+/* line 89, partials/themes/matan-light/_tables_override.scss */
+.table-rows-extendable tbody tr td:last-child .cell-content, table.table.table-rows-extendable tbody tr td:last-child .cell-content {
+  min-width: 0px;
 }
 
-/* line 19, partials/themes/matan-light/_tables_override.scss */
+/* line 97, partials/themes/matan-light/_tables_override.scss */
 div.panel .table, table.table, table.table.table-striped {
   background-color: #F7F9FA;
 }
-/* line 22, partials/themes/matan-light/_tables_override.scss */
+/* line 100, partials/themes/matan-light/_tables_override.scss */
 div.panel .table > thead, div.panel .table > thead tr, table.table > thead, table.table > thead tr, table.table.table-striped > thead, table.table.table-striped > thead tr {
   background-color: #1d3d56;
   color: #ffffff;
   height: 38px;
 }
-/* line 27, partials/themes/matan-light/_tables_override.scss */
+/* line 105, partials/themes/matan-light/_tables_override.scss */
 div.panel .table > thead th, div.panel .table > thead tr th, table.table > thead th, table.table > thead tr th, table.table.table-striped > thead th, table.table.table-striped > thead tr th {
   vertical-align: middle;
 }
-/* line 30, partials/themes/matan-light/_tables_override.scss */
+/* line 108, partials/themes/matan-light/_tables_override.scss */
 div.panel .table > thead th > *, div.panel .table > thead tr th > *, table.table > thead th > *, table.table > thead tr th > *, table.table.table-striped > thead th > *, table.table.table-striped > thead tr th > * {
   padding-bottom: 3px;
   padding-left: 5px;
 }
-/* line 34, partials/themes/matan-light/_tables_override.scss */
+/* line 112, partials/themes/matan-light/_tables_override.scss */
 div.panel .table > thead th button, div.panel .table > thead tr th button, table.table > thead th button, table.table > thead tr th button, table.table.table-striped > thead th button, table.table.table-striped > thead tr th button {
   color: #ffffff;
 }
-/* line 43, partials/themes/matan-light/_tables_override.scss */
-div.panel .table > tbody > tr > td:first-child > .cell-content, table.table > tbody > tr > td:first-child > .cell-content, table.table.table-striped > tbody > tr > td:first-child > .cell-content {
+/* line 119, partials/themes/matan-light/_tables_override.scss */
+div.panel .table tbody.tbody-transparent .cell-content, table.table tbody.tbody-transparent .cell-content, table.table.table-striped tbody.tbody-transparent .cell-content {
+  background-color: transparent;
+  box-shadow: none;
+  border-bottom: 1px solid #cfd9e2;
+  border-bottom-left-radius: 0px !important;
+  border-bottom-right-radius: 0px !important;
+}
+/* line 131, partials/themes/matan-light/_tables_override.scss */
+div.panel .table tbody > tr > td:first-child > .cell-content, table.table tbody > tr > td:first-child > .cell-content, table.table.table-striped tbody > tr > td:first-child > .cell-content {
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
 }
-/* line 49, partials/themes/matan-light/_tables_override.scss */
-div.panel .table > tbody > tr > td:last-child > .cell-content, table.table > tbody > tr > td:last-child > .cell-content, table.table.table-striped > tbody > tr > td:last-child > .cell-content {
+/* line 137, partials/themes/matan-light/_tables_override.scss */
+div.panel .table tbody > tr > td:last-child > .cell-content, table.table tbody > tr > td:last-child > .cell-content, table.table.table-striped tbody > tr > td:last-child > .cell-content {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
 }
-/* line 54, partials/themes/matan-light/_tables_override.scss */
-div.panel .table > tbody > tr td, table.table > tbody > tr td, table.table.table-striped > tbody > tr td {
+/* line 142, partials/themes/matan-light/_tables_override.scss */
+div.panel .table tbody > tr td, table.table tbody > tr td, table.table.table-striped tbody > tr td {
   padding: 0px;
   border: 0px;
   background-color: #F7F9FA;
@@ -9402,8 +9486,8 @@ div.panel .table > tbody > tr td, table.table > tbody > tr td, table.table.table
   height: 58px;
   min-width: 80px;
 }
-/* line 62, partials/themes/matan-light/_tables_override.scss */
-div.panel .table > tbody > tr td .cell-content, table.table > tbody > tr td .cell-content, table.table.table-striped > tbody > tr td .cell-content {
+/* line 150, partials/themes/matan-light/_tables_override.scss */
+div.panel .table tbody > tr td .cell-content, table.table tbody > tr td .cell-content, table.table.table-striped tbody > tr td .cell-content {
   margin-top: 3px;
   margin-bottom: 3px;
   padding-top: 8px;
@@ -9416,29 +9500,29 @@ div.panel .table > tbody > tr td .cell-content, table.table > tbody > tr td .cel
   height: 92%;
   box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.1);
 }
-/* line 75, partials/themes/matan-light/_tables_override.scss */
-div.panel .table > tbody > tr td .cell-content *, table.table > tbody > tr td .cell-content *, table.table.table-striped > tbody > tr td .cell-content * {
+/* line 163, partials/themes/matan-light/_tables_override.scss */
+div.panel .table tbody > tr td .cell-content *, table.table tbody > tr td .cell-content *, table.table.table-striped tbody > tr td .cell-content * {
   margin-top: 0px;
   padding-top: 0px;
   vertical-align: top;
 }
-/* line 81, partials/themes/matan-light/_tables_override.scss */
-div.panel .table > tbody > tr td .cell-content > *, table.table > tbody > tr td .cell-content > *, table.table.table-striped > tbody > tr td .cell-content > * {
+/* line 169, partials/themes/matan-light/_tables_override.scss */
+div.panel .table tbody > tr td .cell-content > *, table.table tbody > tr td .cell-content > *, table.table.table-striped tbody > tr td .cell-content > * {
   display: table-cell;
   vertical-align: top;
   padding-top: 8px;
   padding-bottom: 16px;
 }
-/* line 88, partials/themes/matan-light/_tables_override.scss */
-div.panel .table > tbody > tr td .cell-content > *:first-child, table.table > tbody > tr td .cell-content > *:first-child, table.table.table-striped > tbody > tr td .cell-content > *:first-child {
+/* line 176, partials/themes/matan-light/_tables_override.scss */
+div.panel .table tbody > tr td .cell-content > *:first-child, table.table tbody > tr td .cell-content > *:first-child, table.table.table-striped tbody > tr td .cell-content > *:first-child {
   padding-left: 13px;
 }
-/* line 92, partials/themes/matan-light/_tables_override.scss */
-div.panel .table > tbody > tr td .cell-content .fa-check, table.table > tbody > tr td .cell-content .fa-check, table.table.table-striped > tbody > tr td .cell-content .fa-check {
+/* line 180, partials/themes/matan-light/_tables_override.scss */
+div.panel .table tbody > tr td .cell-content .fa-check, table.table tbody > tr td .cell-content .fa-check, table.table.table-striped tbody > tr td .cell-content .fa-check {
   color: #22bca8;
 }
-/* line 96, partials/themes/matan-light/_tables_override.scss */
-div.panel .table > tbody > tr td .cell-content .fa-times, table.table > tbody > tr td .cell-content .fa-times, table.table.table-striped > tbody > tr td .cell-content .fa-times {
+/* line 184, partials/themes/matan-light/_tables_override.scss */
+div.panel .table tbody > tr td .cell-content .fa-times, table.table tbody > tr td .cell-content .fa-times, table.table.table-striped tbody > tr td .cell-content .fa-times {
   color: #f2526a;
 }
 
